--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,6 +26,9 @@
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QGroupBox" name="userAutorizationGroupbox">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
       <property name="title">
        <string>Vue générale</string>
       </property>
