--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>1007</width>
-    <height>679</height>
+    <height>538</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,13 +30,16 @@
        <enum>Qt::LeftToRight</enum>
       </property>
       <property name="title">
-       <string>Vue générale</string>
+       <string>Mode d'exploitation</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QPushButton" name="consultationButton">
          <property name="text">
           <string>Consultation</string>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -45,12 +48,18 @@
          <property name="text">
           <string>Modification</string>
          </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="adminButton">
          <property name="text">
           <string>Administration</string>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
